# transformer.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.ini  neural_network  test_tensor
include/layers/: Activations.h  Dropout.h  Embedding.h  LayerNorm.h  Linear.h  MultiHeadAttention.h  PositionalEncoding.h  PositionwiseFeedForward.h
include/models/: Decoder.h  DecoderLayer.h  Encoder.h  EncoderLayer.h  Transformer.h
include/utils/: BinaryReader.h  BinaryWriter.h  CharToIdGenerator.h  ConfigParser.h  DataLoader.h  Helpers.h  LossFunction.h  Masking.h  Optimizer.h  SGD.h  Tensor.h  ThreadPool.h  Tokenizer.h  TransformerConfig.h
src/: main.cpp  pch.h
src/layers/: Activations.cpp  Dropout.cpp  Embedding.cpp  LayerNorm.cpp  Linear.cpp  MultiHeadAttention.cpp  PositionalEncoding.cpp  PositionwiseFeedForward.cpp
src/models/: Decoder.cpp  DecoderLayer.cpp  Encoder.cpp  EncoderLayer.cpp  Transformer.cpp
src/utils/: CharToIdGenerator.cpp  ConfigParser.cpp  DataLoader.cpp  LossFunction.cpp  Masking.cpp  Optimizer.cpp  Tensor.cpp  Tensor.h  ThreadPool.cpp  Tokenizer.cpp  TransformerConfig.cpp
tests/: test_tensor.cpp
